--- a/css/style.css
+++ b/css/style.css
@@ -291,7 +291,7 @@ a{
 }
 
 .backEasyQuickly li{
-
+    opacity: 1;
     position: relative;
     text-decoration: none;
     margin: 0;
@@ -301,10 +301,10 @@ a{
     font-size: 14px;
     width: 470px;
     height: 160px;
-    box-shadow: 0 0 15px 10px rgba(0, 0, 0, 0.2), 0 0 7px 2px rgba(0, 0, 0, 0.2);
+
     transition: 1.5s;
     border-radius: 10px;
-    background-color: white;
+    background: rgb(255, 255, 255, 0);
     box-sizing: border-box;
 }
 .iconEQ1{
@@ -331,9 +331,10 @@ a{
     left: 30px;
 }
 .backEasyQuickly li:hover{
-    background: rgba(0, 0, 0, 0);
+    background: rgb(255, 255, 255);
     box-shadow: none;
     cursor: pointer;
+    box-shadow: 0 0 15px 10px rgba(0, 0, 0, 0.2), 0 0 7px 2px rgba(0, 0, 0, 0.2);
 
 }
 
