--- a/css/style.css
+++ b/css/style.css
@@ -52,19 +52,19 @@ header{
     display:none;
     position:absolute;
     top:100%;
-    left:0;
+    right:0;
     background:#fff;
     padding:0
 }
 .menu ul ul li{
-    border-bottom: 1px solid #dcdcdc;
+    border-top: 1px solid #dcdcdc;
     width: 150px;
 }
 
 .menu ul ul ul
 {
     top:0;
-    left:100%
+    right:100%
 }
 
 .menu ul li:hover > ul
@@ -203,22 +203,29 @@ a{
     list-style-type: none;
     font-style: italic;
 }
-.slide1{
-    padding: 60px 0;
+.slide1Slide{
     background: #fff url("../img/slide/slide1.png") 0 0 no-repeat;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end;
-    text-align: right;
+    position: relative;
+    border-radius: 0 50px 50px 0 / 0 150px 150px 0;
+    width: 50%;
+    background-size: cover;
 }
-.slide2{
-    padding: 60px 0;
+.contentslide{
+    width: 1440px;
+    margin: 0 auto;
+}
+.slide2Slide{
     background: #fff url("../img/slide/slide2.png") 0 0 no-repeat;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    text-align: left;
+    position: relative;
+    border-radius: 0 50px 50px 0 / 0 150px 150px 0;
+    width: 50%;
+    background-size: cover;
 }
+
+
+
+
+
 
 
 
@@ -226,11 +233,13 @@ a{
     border: none;
 }
 .slide1Text{
+    padding: 50px 0;
+    text-align: right;
     font-size: 16px;
     color: #808080;
-    width: 30%;
-
+    width: 40%;
 }
+
 
 .buttonSlide1{
     display: inline-block;
@@ -248,11 +257,9 @@ a{
 
 .bx-wrapper .bx-pager{
     position: absolute;
-    top: 90%;
-    left: 31%;
+    bottom: 30px !important;
+    right: -550px;
 }
-
-
 
 
 
@@ -285,7 +292,6 @@ a{
 
 
 .backEasyQuickly{
-    height: 670px;
     background: url("../img/start/backEasy&Quickly.png") 0 0 no-repeat;
     width: 100%;
 }
@@ -304,7 +310,7 @@ a{
 
     transition: 1.5s;
     border-radius: 10px;
-    background: rgb(255, 255, 255, 0);
+    background: rgb(255, 255, 255, .0);
     box-sizing: border-box;
 }
 .iconEQ1{
@@ -397,6 +403,10 @@ a{
     background-color: #f4213a;
     box-shadow: 0 0 55px 20px rgba(255, 20, 0, 0.51), 0 0 57px 20px rgba(255, 13, 0, 0.51);
 }
+.backNews a:hover .Blogtext p:after{
+    background: linear-gradient(to bottom, rgba(255,255,255,0) 0%,rgba(255,255,255,0) 1%, rgb(244, 33, 58) 100%);
+
+}
 
 
 
@@ -406,7 +416,7 @@ a{
 }
 .Blogtext{
 
-
+    position: relative;
     padding: 10px;
 
 }
@@ -416,7 +426,19 @@ a{
     height: 80px;
     overflow: hidden;
     text-overflow: ellipsis;
+    transition: .5s;
 }
+.Blogtext p:after{
+    content: '';
+    position: absolute;
+    top: 80px;
+    left: 0;
+    width: 350px;
+    height: 60px;
+    transition: .5s;
+    background: linear-gradient(to bottom, rgba(255,255,255,0) 0%,rgba(255,255,255,0) 1%,rgba(255,255,255,1) 100%);
+}
+
 
 .greycolor{
     color: #9e9e9e;
@@ -462,10 +484,25 @@ a{
     border: 1px solid darkgrey;
     background: white;
     padding: 20px 20px;
-    width: 48%;
-    margin: 60px 0 20px 0;
+    width: 100%;
+    margin: 60px 10px 20px;
     box-sizing: border-box;
 }
+form input:last-child{
+    margin-right: 0;
+}
+form input:first-child{
+    margin-left: 0;
+}
+
+/*.Badidea:first-child{*/
+    /*margin-right: -20px;*/
+/*}*/
+/*.Badidea:last-child{*/
+    /*margin-left: -20px;*/
+/*}*/
+
+
 .ButtonSEND{
     display: inline-block;
     color: white;
