--- a/css/style.css
+++ b/css/style.css
@@ -222,17 +222,24 @@ a{
     background-size: cover;
 }
 
+.slide1Text p:after{
+    content: '';
+    position: absolute;
+    right: 0;
+    bottom: 140px;
+    width: 440px;
+    height: 60px;
+    transition: .5s;
 
-
-
-
-
+    background: linear-gradient(to bottom, rgba(255,255,255,0) 0%,rgba(255,255,255,0) 1%,rgba(255,255,255,1) 100%);
+}
 
 
 .slider{
     border: none;
 }
 .slide1Text{
+    position: relative;
     padding: 50px 0;
     text-align: right;
     font-size: 16px;
@@ -306,7 +313,7 @@ a{
     color: #6a6a6a;
     font-size: 14px;
     width: 470px;
-    height: 160px;
+    min-height: 160px;
 
     transition: 1.5s;
     border-radius: 10px;
@@ -359,7 +366,7 @@ a{
 .BackDownloan{
     text-align: right;
     color: white;
-    padding: 10em;
+    padding: 15em;
 
     background: #fff url(../img/start/backDownload.png) 0 0 no-repeat;
     background-size: cover;
@@ -388,7 +395,6 @@ a{
     padding: 9em;
 }
 .BlogBorder{
-    transition: .5s;
     padding: 6px;
     width: 350px;
     box-shadow: 0 0 15px 10px rgba(0, 0, 0, 0.1), 0 0 7px 2px rgba(0, 0, 0, 0.1);
@@ -408,6 +414,16 @@ a{
 
 }
 
+.Blogtext h6{
+    overflow: hidden;
+    height: 45px;
+}
+.TimeComment{
+    display: flex;
+    justify-content: space-between;
+    padding: 10px;
+    color: #c0c0c0;
+}
 
 
 .BlogBorder img{
@@ -423,7 +439,7 @@ a{
 .Blogtext p{
     color: #7f7f7f;
     font-size: 14px;
-    height: 80px;
+    height: 90px;
     overflow: hidden;
     text-overflow: ellipsis;
     transition: .5s;
@@ -431,7 +447,7 @@ a{
 .Blogtext p:after{
     content: '';
     position: absolute;
-    top: 80px;
+    top: 100px;
     left: 0;
     width: 350px;
     height: 60px;
@@ -487,6 +503,12 @@ a{
     width: 100%;
     margin: 60px 10px 20px;
     box-sizing: border-box;
+}
+input{
+    outline:none;
+}
+textarea{
+    outline:none;
 }
 form input:last-child{
     margin-right: 0;
